--- a/src/ui.css
+++ b/src/ui.css
@@ -1,12 +1,12 @@
 body {
     font: 12px sans-serif;
     text-align: center;
-    margin: 24px;
+    margin: 16px;
   }
   input {
     border: none;
+    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
     outline: none;
-    padding: 8px;
+    padding: 16px;
   }
-  input:hover { box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1); }
   input:focus { box-shadow: inset 0 0 0 2px #18A0FB; }
