--- a/src/ui.css
+++ b/src/ui.css
@@ -1,12 +1,16 @@
 body {
-    font: 12px sans-serif;
+    font: 16px sans-serif;
     text-align: center;
-    margin: 16px;
+    margin: 8px;
+    max-height: 100px;
   }
   input {
     border: none;
     box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
     outline: none;
-    padding: 16px;
+    padding: 12px;
+    width: 100%;
+    border-radius: 2px;
+
   }
   input:focus { box-shadow: inset 0 0 0 2px #18A0FB; }
