--- a/src/menu.css
+++ b/src/menu.css
@@ -4,11 +4,13 @@ body {
   margin: 0;
   width: 180px;
 }
+
 section {
   display: flex;
   flex-direction: column;
   margin: 4px 0;
 }
+
 button {
   background: none;
 	color: inherit;
@@ -19,6 +21,16 @@ button {
   display: flex;
   align-items: center;
   padding: 0 12px;
+}
+
+.move-up-down-btns {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.move-up-down-btn {
+  flex: 1 1 0%;
 }
 
 #move-in-btn {
