--- a/src/ui.css
+++ b/src/ui.css
@@ -1,14 +1,35 @@
 body {
-    font: 16px sans-serif;
-    text-align: center;
-    margin: 8px;
-  }
-  input {
-    border: none;
-    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
-    outline: none;
-    padding: 12px;
-    width: 100%;
-    border-radius: 2px;
-  }
-  input:focus { box-shadow: inset 0 0 0 2px #18A0FB; }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font: 16px sans-serif;
+  text-align: center;
+  margin: 8px;
+}
+
+input {
+  border: none;
+  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
+  outline: none;
+  padding: 12px;
+  width: 100%;
+  border-radius: 2px;
+  margin-right: 12px;
+}
+
+input::placeholder {
+  color: #949494;
+}
+
+input:focus { box-shadow: inset 0 0 0 2px #18A0FB; }
+
+button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #67b195;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+}
