--- a/src/menu.css
+++ b/src/menu.css
@@ -11,11 +11,11 @@ section {
   margin: 6px 0;
 }
 
-hr {
+/* hr {
   margin: 6px 0;
   border: none;
   border-bottom: 1px solid #e6e6e6;
-}
+} */
 
 button {
   background: none;
