--- a/src/ui.css
+++ b/src/ui.css
@@ -1,9 +1,5 @@
 body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   font: 16px sans-serif;
-  text-align: center;
   margin: 8px;
 }
 
@@ -12,9 +8,10 @@ input {
   box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
   outline: none;
   padding: 12px;
-  width: 100%;
   border-radius: 2px;
-  margin-right: 12px;
+  width: 100%;
+  font-size: 14px;
+  line-height: 16px;
 }
 
 input::placeholder {
@@ -22,14 +19,3 @@ input::placeholder {
 }
 
 input:focus { box-shadow: inset 0 0 0 2px #18A0FB; }
-
-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #67b195;
-  border: none;
-  border-radius: 4px;
-  color: white;
-  cursor: pointer;
-}
