--- a/src/ui.css
+++ b/src/ui.css
@@ -1,21 +1,57 @@
 body {
-  font: 16px sans-serif;
-  margin: 8px;
+  font: 12px sans-serif;
+  text-align: center;
+  margin: 0;
+  width: 220px;
 }
 
-input {
+section {
+  display: flex;
+  flex-direction: column;
+  margin: 6px 0;
+}
+
+/* hr {
+  margin: 6px 0;
   border: none;
-  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
-  outline: none;
-  padding: 12px;
-  border-radius: 2px;
-  width: 100%;
-  font-size: 14px;
+  border-bottom: 1px solid #e6e6e6;
+} */
+
+button {
+  background: none;
+	color: inherit;
+	border: none;
+	font: inherit;
+	cursor: default;
+	outline: inherit;
+  display: flex;
+  align-items: center;
+  padding: 8px 12px;
   line-height: 16px;
+  width: 220px;
 }
 
-input::placeholder {
-  color: #949494;
+#move-in-btn {
+  display: none;
 }
 
-input:focus { box-shadow: inset 0 0 0 2px #18A0FB; }
+button > * {
+  margin-right: 9px;
+  pointer-events: none
+}
+
+button:hover {
+  background: #f5f5f5;
+}
+
+button:disabled,
+button[disabled] {
+  opacity: 30%;
+  cursor: default;
+}
+
+button:disabled:hover,
+button[disabled][hover] {
+  background: none;
+}
+
